Revision history for perl distribution Mojo-Redis

3.04 Not Released
 - Documented how pipelining works #7

3.03 2018-07-05T11:45:01+0800
 - Add eval(), evalsha() and script() #8
 - Cannot have a custom class for transactions #14

3.02 2018-07-01T18:24:37+0900
 - Add Mojo::Redis::Cache->memomize_p()
 - Add examples/twitter.pl
 - Add UTF-8 encoding as default and allow encoding to be changed #1
 - Add documentation for events #2
 - Add support for connecting to unix socket #12
 - Add support for offline cache #15
 - Add support for refreshing cache #16

3.01 2018-06-28T15:22:47+0900
 - Add Mojo::Redis::Cache
 - Add examples/chat.pl

3.00 2018-06-28T10:11:24+0900
 - Started on a new version to replace Mojo::Redis2 and the old Mojo::Redis
 - Mojo::Redis as EXPERIMENTAL
 - Add connection pool
 - Add Mojo::Redis::Cursor
 - Add Mojo::Redis::Database
 - Add Mojo::Redis::PubSub
 - Add Mojo::Redis::Transaction